model trainer added

--- a/params.yaml
+++ b/params.yaml
@@ -1,1 +1,8 @@
-key: value
+RandomForestClassifier:
+  n_estimators: 500 
+  criterion: 'gini' 
+  max_depth: None
+  min_samples_split: 2
+  min_samples_leaf: 1
+  bootstrap: True
+  ccp_alpha: 0.0
